  * Update lbdb.el to version 1.3 (thanks Dave).
  * m_muttalias: Add support for "alias foo <foo@bar> (Foo Bar)" style
    aliases.
  * Correct typo in m_muttalias, which stopped to work when your HOME is
    your MUTT_DIRECTORY (Closes: #71975).
  * Correct README (we have more than two modules now :-)
  * Create sysconfdir, if it doesn't already exist.

 --

lbdb (0.20.1) unstable; urgency=low

  * Fix name conflicts (m_palm_lsaddr now completely renamed to
    palm_lsaddr).

 -- Roland Rosenfeld <roland@debian.org>  Thu, 24 Aug 2000 04:14:05 +0200

lbdb (0.20) unstable; urgency=low

  * Add emacs interface lbdb.el 1.2 by Dave Pearson <davep@davep.org> and
    install it on Debian systems.
  * Add m_palm module and palm_lsaddr by Dave Pearson <davep@davep.org>.
  * Update package description in debian/control file.
  * Update documentation.
  * Add override.Lintian to avoid warnings about missing Palm::PDB and
    Palm::Address, which are in libpalm-perl, that is suggested (we don't
    depend on it, because this is only used by the m_palm module).
  * Rename $p to $CURRENT_MODULE_DIR in lbdbq, so a module can access the
    directory where it is placed itself for accessing some helper
    applications.

 -- Roland Rosenfeld <roland@debian.org>  Mon, 21 Aug 2000 15:46:02 +0200

lbdb (0.19.9) unstable; urgency=low

  * Remove erroneous quotes from lbdb-fetchaddr, which caused fetchaddr to
    write "`' wrong parameter" error message to procmail log file.
  * Correct the getopt behavior in lbdb-fetchaddr.
  * s/strfcpy/strncpy/ in fetchaddr.c.

 -- Roland Rosenfeld <roland@debian.org>  Wed, 16 Aug 2000 13:45:47 +0200

lbdb (0.19.8) unstable; urgency=low

  * Renamed option -h to -x, because -h is already used for "help".

 -- Roland Rosenfeld <roland@debian.org>  Tue,  8 Aug 2000 19:04:07 +0200

lbdb (0.19.7) unstable; urgency=low

  * Add a new option -h to lbdb-fetchaddr and fetchaddr, which allows you