@@ -15,12 +15,6 @@ $Id$
 - Add man page for configuration file lbdbrc(5) or something like
   this.
 
-- lbdbq: write some information about lbdbq and/or the used databases
-  into the header line (at the moment this line is left empty).
-
-- lbdbq should abort with non-zero exist code and a one line error
-  messsage, if nothing matches (at the moment it returns 0).
-
 - Think about a debug/log mechanism for lbdbq and the modules, so an
   error in a module doesn't imply lbdbq to fail but all other modules
   work as usual and the error messages (and debug informations) are
@@ -42,7 +36,7 @@ $Id$
 
 
 Roland Rosenfeld <roland@spinnaker.de>
-
+$Id$
 
 Local variables:
 mode: text
